freeform-docs/v3/guides/README.md
---
title: Craft Freeform 3.x - Guides
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: version /craft/freeform/v5/guides/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">3.x</span>
            <span class="pr-v-type pr-retired">Retired</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<span class="page-section">User Guides</span>

# Guides for Freeform

Check out the guides below to see solutions to common problems and questions:

<div class="menu-grid">
    <a href="#form-validation" class="menu-box">
        <img src="../../../../images/icons/review.png" alt="Form Validation">
        <div class="menu-grid-text">
            <h3>Form Validation</h3>
            <p>Explore additional validation options for your forms.</p>
        </div>
    </a>
    <a href="#dynamic-data" class="menu-box">
        <img src="../../../../images/icons/magic-wand.png" alt="Dynamic Data">
        <div class="menu-grid-text">
            <h3>Dynamic Data</h3>
            <p>Learn how to integrate external data dynamically.</p>
        </div>
    </a>
    <a href="#templating" class="menu-box">
        <img src="../../../../images/icons/code.png" alt="Templating">
        <div class="menu-grid-text">
            <h3>Templating</h3>
            <p>A variety of commonly requested templating tips & tricks.</p>
        </div>
    </a>
    <a href="#submission-data" class="menu-box">
        <img src="../../../../images/icons/archive.png" alt="Submission Data">
        <div class="menu-grid-text">
            <h3>Submission Data</h3>
            <p>Tips and tricks for handling submission data.</p>
        </div>
    </a>
    <a href="#specialty-forms" class="menu-box">
        <img src="../../../../images/icons/clipboard.png" alt="Specialty Forms">
        <div class="menu-grid-text">
            <h3>Specialty Forms</h3>
            <p>Guides for building specialty forms like user registration.</p>
        </div>
    </a>
    <a href="#best-practices" class="menu-box">
        <img src="../../../../images/icons/thumbs-up.png" alt="Best Practices">
        <div class="menu-grid-text">
            <h3>Best Practices</h3>
            <p>Guides that show best practices with Freeform.</p>
        </div>
    </a>
    <a href="#testing" class="menu-box">
        <img src="../../../../images/icons/tap.png" alt="Testing">
        <div class="menu-grid-text">
            <h3>Testing</h3>
            <p>Testing and troubleshooting guides for your forms.</p>
        </div>
    </a>
    <a href="#developer" class="menu-box">
        <img src="../../../../images/icons/development.png" alt="Developer">
        <div class="menu-grid-text">
            <h3>Developer</h3>
            <p>Guides for custom development and building modules.</p>
        </div>
    </a>
</div>


[[toc]]


<div class="content-block">

## Form Validation

- [Form Validation with Parsley](form-validation-with-parsley.md)
- [Form Validation with Foundation Abide](form-validation-with-foundation-abide.md)
- [Form Validation with Bootstrap](form-validation-with-bootstrap.md)
- [Preventing Certain Email Addresses](./preventing-email-addresses.md)

</div>
<div class="content-block">

## Dynamic Data

- [Passing Dynamic Data to Forms](./passing-dynamic-data-to-forms.md)
- [Fill Field Values from Query String](./fill-field-values-from-query-string.md)
- [Send Email Notifications only in Certain Scenarios](./email-notifications-certain-scenarios.md)
- [Populate Field Options at Template Level](./populate-field-options-at-template-level.md)
- [Displaying Submission Data from Previous Pages](./displaying-submission-data-from-previous-pages.md)

</div>
<div class="content-block">

## Templating

- [AJAX Forms](../templating/ajax-forms.md)
- [Cacheable Forms](../templating/caching.md)
- [Using Vue.js](./using-vue-js.md)
- [Rendering Form Data as JSON](rendering-form-data-as-json.md)
- [Multiple Instances of the Same Form](multiple-instances-of-same-form.md)
- [Returning Submit to Same Page](./return-same-page.md)
- [Success Return URL on Forms](./success-return-on-forms.md)
- [Alternate Success Markup from a Template or Existing Div after AJAX Submit](ajax-return-loads-success.md)

</div>
<div class="content-block">

## Submission Data

- [Submission Data on Success Page](./submission-data-success.md)

</div>
<div class="content-block">

## Specialty Forms

- [User Registration Forms](./user-registration-forms.md)

</div>
<div class="content-block">

## Best Practices

- [Spam Protection](./spam-protection-best-practices.md)

</div>
<div class="content-block">

## Testing

- [Email Testing with Mailtrap](./email-testing-mailtrap.md)

</div>
<div class="content-block">

## Developer

- [Building a Custom Module](./building-a-custom-module.md)
- [Can I make my own CRM or Email Marketing API integration?](./custom-integrations/)

</div>