freeform-docs/v4/guides/README.md
---
title: Craft Freeform 4.x - User Guides
description: Check out the user guides to see solutions to common problems and questions.
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: new /craft/freeform/v5/guides/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">4.x</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<span class="page-section">User Guides</span>

# User Guides for Freeform

<div class="hero-lead">

Check out the user guides below to see solutions to common problems and questions:

::: guide ./troubleshooting-form-issues/
Quick troubleshooting the most commonly reported issues with your form's appearance, behavior, or submission of the form on the front end.
:::

</div>

<div class="menu-grid">
    <a href="#form-validation" class="menu-box">
        <img src="../../../../images/icons/review.png" alt="Form Validation">
        <div class="menu-grid-text">
            <h3>Form Validation</h3>
            <p>Explore additional validation options for your forms.</p>
        </div>
    </a>
    <a href="#dynamic-data" class="menu-box">
        <img src="../../../../images/icons/magic-wand.png" alt="Dynamic Data">
        <div class="menu-grid-text">
            <h3>Dynamic Data</h3>
            <p>Learn how to integrate external data dynamically.</p>
        </div>
    </a>
    <a href="#templating" class="menu-box">
        <img src="../../../../images/icons/code.png" alt="Templating">
        <div class="menu-grid-text">
            <h3>Templating</h3>
            <p>A variety of commonly requested templating tips.</p>
        </div>
    </a>
    <a href="#field-styling" class="menu-box">
        <img src="../../../../images/icons/pallete.png" alt="Field Styling">
        <div class="menu-grid-text">
            <h3>Field Styling</h3>
            <p>Implement custom styles on regular field types.</p>
        </div>
    </a>
    <a href="#submission-data" class="menu-box">
        <img src="../../../../images/icons/archive.png" alt="Submission Data">
        <div class="menu-grid-text">
            <h3>Submission Data</h3>
            <p>Tips and tricks for handling submission data.</p>
        </div>
    </a>
    <a href="#specialty-forms" class="menu-box">
        <img src="../../../../images/icons/clipboard.png" alt="Specialty Forms">
        <div class="menu-grid-text">
            <h3>Specialty Forms</h3>
            <p>Guides for building specialty forms like user registration.</p>
        </div>
    </a>
    <a href="#best-practices" class="menu-box">
        <img src="../../../../images/icons/thumbs-up.png" alt="Best Practices">
        <div class="menu-grid-text">
            <h3>Best Practices</h3>
            <p>Guides that show best practices with Freeform.</p>
        </div>
    </a>
    <a href="#testing" class="menu-box">
        <img src="../../../../images/icons/tap.png" alt="Testing">
        <div class="menu-grid-text">
            <h3>Testing</h3>
            <p>Testing and troubleshooting guides for your forms.</p>
        </div>
    </a>
    <a href="#headless" class="menu-box">
        <img src="../../../../images/icons/headless.png" alt="Headless">
        <div class="menu-grid-text">
            <h3>Headless</h3>
            <p>Demos of common headless frameworks and GraphQL.</p>
        </div>
    </a>
    <a href="#developer" class="menu-box">
        <img src="../../../../images/icons/development.png" alt="Developer">
        <div class="menu-grid-text">
            <h3>Developer</h3>
            <p>Guides for custom development and building modules.</p>
        </div>
    </a>
</div>


[[toc]]


## Form Validation

- [Form Validation with Parsley](form-validation-with-parsley/)
- [Form Validation with Foundation Abide](form-validation-with-foundation-abide/)
- [Form Validation with Bootstrap](form-validation-with-bootstrap/)
- [Preventing Certain Email Addresses](./preventing-email-addresses/)


## Dynamic Data

- [Passing Dynamic Data to Forms](./passing-dynamic-data-to-forms/)
- [Passing a Custom Property to a Formatting Template](./passing-custom-property-to-formatting-template/)
- [Fill Field Values from Query String](./fill-field-values-from-query-string/)
- [Send Email Notifications only in Certain Scenarios](./email-notifications-certain-scenarios/)
- [Populate Field Options at Template Level](./populate-field-options-at-template-level/)
- [Displaying Submission Data from Previous Pages](./displaying-submission-data-from-previous-pages/)


## Templating

- [AJAX Forms](../templates/ajax-forms/)
- [Cacheable Forms](../templates/caching/)
- [Rendering Form Data as JSON](rendering-form-data-as-json/)
- [Line Breaks in Textarea Fields](line-breaks-in-textarea-fields/)
- [Multiple Instances of the Same Form](multiple-instances-of-same-form/)
- [Returning Submit to Same Page](./return-same-page/)
- [Success Return URL on Forms](./success-return-on-forms/)
- [Alternate Success Markup from a Template or Existing Div after AJAX Submit](ajax-return-loads-success/)


## Field Styling

- [Range Slider on Number field](./range-slider-number/)
- [Toggle Switch on Checkbox field](./toggle-switch-checkbox/)
- [Color Picker on Text field](./color-picker-text/)
- [TinyMCE Rich Text Editor on Textarea field](./tinymce-editor-textarea/)
- [Include an "Other" Option for Fields](other-option-for-fields/)
- [Parsing HTML in Field Options](parsing-html-in-field-options/)


## Submission Data

- [Submission Data on Success Page](./submission-data-success/)
- [Display Total Number of Submissions for a Form](./total-number-of-submissions-for-form/)
- [Setting up Google Tag Manager](./google-tag-manager/)
- [Storing URL Tracking Parameters](./storing-url-tracking-parameters/)


## Specialty Forms

- [User Registration Forms](./user-registration-forms/)


## Best Practices

- [How to Stay Informed about Freeform](./stay-informed/)
- [Form Submitter's Email Address as the Reply-to Email](./admin-notifications-replyto-submitter/)
- [Spam Protection](./spam-protection-best-practices/)


## Testing

- [Troubleshooting Form Issues](./troubleshooting-form-issues/)
- [Email Testing with Mailtrap](./email-testing-mailtrap/)
- [How to Remove Demo Templates](./remove-demo-templates/)


## Headless

- [Vue.js + GraphQL demo](../headless/vuejs/)
- [Vue.js + AJAX demo](../headless/vuejs/)
- [React JS + GraphQL demo](../headless/reactjs/)
- [React JS + AJAX demo](../headless/reactjs/)
- [Next.js + GraphQL demo](../headless/nextjs/)
- [Next.js + AJAX demo](../headless/nextjs/)


## Developer

- [Building a Custom Module](./building-a-custom-module/)
- [Can I make my own CRM or Email Marketing API integration?](./custom-integrations/)